kubernetes/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: blog-service
spec:
  selector:
    app: blog
  ports:
    - port: 80
      targetPort: 8080
